--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="title_home">我的</string>
     <string name="title_message">信息</string>
     <string name="title_publish">发布</string>
+    <string name="title_activity_bottomnavigtion">BottomnavigtionActivity</string>
 </resources>
