--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,6 @@
 <resources>
     <string name="app_name">AndroidApplication</string>
     <string name="title_activity_navigation">NavigationActivity</string>
-    <string name="title_home">我的</string>
-    <string name="title_message">信息</string>
-    <string name="title_publish">发布</string>
     <string name="title_activity_bottomnavigtion">BottomnavigtionActivity</string>
+    <string name="title_activity_navigations">NavigationsActivity</string>
 </resources>
