--- a/CaiXiaoShuangLibrary/src/main/res/values/strings.xml
+++ b/CaiXiaoShuangLibrary/src/main/res/values/strings.xml
@@ -135,6 +135,5 @@
     <string name="sbc_name">Google Book Search</string>
     <string name="wifi_changing_network">Requesting connection to network\u2026</string>
 
-    <string name="viewfinderview_status_text1">将二维码/条码放入取景框内</string>
-    <string name="viewfinderview_status_text2">即可自动扫描</string>
+    <string name="viewfinderview_status_text1">放入框内，自动扫描</string>
 </resources>
