--- a/CaiXiaoShuangLibrary/src/main/res/values/strings.xml
+++ b/CaiXiaoShuangLibrary/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">AndroidLibrary</string>
+    <string name="app_name">CaiXiaoShuang</string>
     <string name="pull_to_refresh">下拉刷新</string>
     <string name="release_to_refresh">释放立即刷新</string>
     <string name="refreshing">正在刷新...</string>
